--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
     text-transform: uppercase;
     letter-spacing: .5em;
     top: 15%;
-	background: linear-gradient(to right, red , yellow); /* Standard syntax */
+	background: linear-gradient(to right, purple , yellow); /* Standard syntax */
 }
 
 h1 {
@@ -24,4 +24,8 @@ h3 {
     text-transform: none;
     letter-spacing: 0.01em;
 
+}
+
+div {
+    padding: 3%;
 }
